# IPSRO

./: CMakeLists.txt  LICENSE_darkflow  LICENSE_densecap  LICENSE_openpose  README.md  package.xml
launch/: DIP.py~  DIP_jychoi.launch  DIP_jychoi.launch~  launch_modules.py~  obj_detector.py~  pepper_navigation.launch~  pepper_start_jy.launch~  run_module.py  run_object.py~  run_reid.py~
msg/: objs.msg  objs.msg~
src/: DIP.py  DIP_config.txt  DIP_config.txt~  DIP_load_config.py  DIP_load_config.py~  image_captioner.py  image_captioner.py~  obj_detector.py  obj_detector.py~  person_reid.py  person_reid.py~  pose_estimator.py  pose_estimator.py~  run_pepper.sh
src/captioning_model/: run_ros.lua
src/object_model/: put_yolo_weight_here
